Generate moles in random squares and add points
Generating the moles in random squares and counting points when the user whacks a mole

--- a/src/app/play-field/play-field.component.html
+++ b/src/app/play-field/play-field.component.html
@@ -3,6 +3,7 @@
     class="square"
     id="square{{ i }}"
     *ngFor="let in of counter(25); index as i"
+    (click)="clickedSquare(i)"
   >
     <img
       id="mole{{ i }}"
