--- a/src/app/play-field/play-field.component.css
+++ b/src/app/play-field/play-field.component.css
@@ -24,15 +24,24 @@
 img {
   width: 100%;
   object-fit: contain;
-  animation: rise 0.3s ease-out;
+  animation: rise 5s ease-out;
 }
 
 @keyframes rise {
   0% {
     transform: translateY(100%);
   }
-  100% {
+  25% {
     transform: translateY(0);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  75% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(100%);
   }
 }
 
